# MobileRobotTraining

chassis_controller/: package.xml  setup.cfg  setup.py
chassis_controller/chassis_controller/: __init__.py  controller_node.py  motor_driver.py  time_checker.py
chassis_controller/launch/: controller.launch.py
sllidar_ros2/launch/: sllidar_c1_launch.py
sllidar_ros2/src/: sllidar_node.cpp
vehicle_nav2/: package.xml  setup.cfg  setup.py
vehicle_nav2/config/: angular_filter_example.yaml  mapper_params_online_async.yaml  nav2.yaml  slam_rviz.rviz
vehicle_nav2/conifg/: nav2.yaml
vehicle_nav2/launch/: laser_and_chassis.launch.py  laser_filter.launch.py  nav.launch.py  slam.launch.py
vehicle_nav2/maps/: map_101.pgm  map_101.yaml  map_1770008955.pgm  map_1770008955.yaml
vehicle_urdf/: CMakeLists.txt  package.xml
vehicle_urdf/launch/: display.launch.py  sim.launch.py
vehicle_urdf/meshes/: caster.stl  chassis.stl  left_wheel.stl  right_wheel.stl
vehicle_urdf/urdf/: vehicle.urdf.xacro
