<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_nav2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO: License declaration</license>

  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_rviz_plugins</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
